--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Murder -- Fiction'
 - !lcsh 'Single women -- Fiction'
+- GITenberg
 title: 'The Headless Horseman: A Strange Tale of Texas'
 url: http://www.gutenberg.org/ebooks/35587
 wikipedia:
